<resources>
    <string name="app_name" translatable="false">Carla</string>
    <string name="title_activity_maps" translatable="false">Map</string>

    <string name="bills" translatable="false">Bills</string>
    <string name="search" translatable="false">Search</string>
    <string name="rides" translatable="false">Rides</string>
    <string name="requests" translatable="false">Requests</string>
    <string name="payment" translatable="false">Payment</string>
    <string name="messages" translatable="false">Messages</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="about" translatable="false">About Us</string>
    <string name="logout" translatable="false">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="header_title" translatable="false">Marc Antoinne</string>
    <string name="do_you_have_an_account" translatable="false">Do you have an account?</string>
    <string name="sign_in" translatable="false">SIGN IN</string>
    <string name="you_discover_carla" translatable="false">You discover Carla?</string>
    <string name="sign_up" translatable="false">SIGN UP</string>
    <string name="carla" translatable="false">CARLA</string>
    <string name="not_yet_client" translatable="false">Not yet client?</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="enter_your_phone_to_get_started" translatable="false">Enter your phone to get started</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="sign_in_title" translatable="false">Sign In</string>
    <string name="already_have_an_account" translatable="false">Already have an account?</string>
    <string name="code" translatable="false">Code</string>
    <string name="enter_the_code_you_just_received" translatable="false">Enter the code you just received</string>
    <string name="you_did_not_received_the_code" translatable="false">You didn\'t received the code?</string>
    <string name="send" translatable="false">SEND AGAIN</string>
    <string name="france" translatable="false">(+33)</string>
    <string name="spain" translatable="false">(+34)</string>
    <string name="canada" translatable="false">(+1)</string>
    <string name="argentina" translatable="false">(+54)</string>


    <string name="new_account" translatable="false">New Account</string>
    <string name="account_type" translatable="false">Account type</string>
    <string name="one" translatable="false">1</string>
    <string name="step_divider" translatable="false">/</string>
    <string name="two" translatable="false">2</string>
    <string name="steps" translatable="false">STEPS</string>
    <string name="three" translatable="false">3</string>
    <string name="phone_verification" translatable="false">Phone verification</string>
    <string name="code_verification" translatable="false">Code verification</string>
    <string name="account_informations" translatable="false">Account informations</string>
    <string name="sign_up_title" translatable="false">Sign Up</string>
    <string name="name" translatable="false">Name</string>
    <string name="surname" translatable="false">Surname</string>
    <string name="email" translatable="false">Email</string>
    <string name="driver" translatable="false">DRIVER</string>
    <string name="want_to_join_our_drivers" translatable="false">Want to join our drivers?</string>
    <string name="registration_in_progress" translatable="false">Registration in progress...</string>
    <string name="title" translatable="false">Title</string>
    <string name="content" translatable="false">Content</string>
    <string name="message" translatable="false">Message</string>

    <string name="successfully_registration" translatable="false">Successfully registration!</string>
    <string name="terms" translatable="false">Terms of use</string>
    <string name="terms_content" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="i_have_read_and_accept_the" translatable="false">I have read and accept the</string>
    <string name="terms_of_use" translatable="false"> terms of use </string>
    <string name="phone_can_not_be_empty" translatable="false">Sorry, phone can not be empty!</string>
    <string name="checking_your_number" translatable="false">Checking your phone...</string>
    <string name="uploading_data" translatable="false">Uploading data...</string>
    <string name="select_picture" translatable="false">Select picture</string>
    <string name="empty_field" translatable="false">Seems like some field are empty!</string>
    <string name="picture_required" translatable="false">Picture required!</string>
    <string name="invalid_email" translatable="false">Please, enter a valid email!</string>
    <string name="you_must_accept_terms" translatable="false">You must read and accept terms of use</string>

    <string name="sign_in_progress" translatable="false">Connection in progress...</string>
    <string name="your_phone_not_recognized" translatable="false">Sorry, we don\'t recognized your phone</string>
    <string name="fetch_data" translatable="false">fetch data</string>
    <string name="default_info_snippet" translatable="false">Default snipet</string>
    <string name="you" translatable="false">Yout</string>
    <string name="pick_place" translatable="false">Where are you?</string>
    <string name="enable" translatable="false">ENABLE</string>
    <string name="please_turn_on_location_setting" translatable="false">Please turn on location setting</string>
    <string name="from" translatable="false">From</string>
    <string name="to" translatable="false">To</string>
    <string name="search_label" translatable="false">Search</string>
    <string name="home" translatable="false">Home</string>
    <string name="office" translatable="false">Office</string>
    <string name="description" translatable="false">Description</string>
    <string name="driver_details" translatable="false">Driver details</string>
    <string name="note" translatable="false">15 / 100</string>
    <string name="send_request" translatable="false">SEND REQUEST</string>
    <string name="starting_empty" translatable="false">You must specified starting and arrival points!</string>
    <string name="getting_price" translatable="false">Getting price</string>
    <string name="pricing" translatable="false">Pricing</string>
    <string name="address" translatable="false">15 rue du progres 93100, Montreuil, France</string>
    <string name="distance" translatable="false">Distance</string>
    <string name="distance_value" translatable="false">222 mi</string>
    <string name="duration_label" translatable="false">3h25min</string>
    <string name="duration" translatable="false">Duration</string>
    <string name="price" translatable="false">Price</string>
    <string name="price_label" translatable="false">15 €</string>
    <string name="sending_request" translatable="false">Sending request...</string>
    <string name="successfully_sent" translatable="false">Your request has been successfully sent</string>
    <string name="my_location" translatable="false">My Location</string>
    <string name="add_address" translatable="false">Add a location</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="updating_in_progress" translatable="false">Updating in progress</string>
    <string name="no_driver" translatable="false">There is no driver available</string>
    <string name="select_locations" translatable="false">Please pick starting and arrival points</string>
    <string name="duration_waiting_time" translatable="false">Waiting time</string>
    <string name="duration_ride_time" translatable="false">Ride time</string>
    <string name="i_have_code" translatable="false">Do you have a code promo?</string>
    <string name="add_code" translatable="false">Add code promo</string>
    <string name="code_needed" translatable="false">Code is mandatory</string>
    <string name="code_wrong" translatable="false">Sorry you enter a wrong code</string>
    <string name="code_sucess" translatable="false">Code added successfully. New price is</string>
    <string name="james" translatable="false">Mateo</string>
    <string name="add_card_label" translatable="false">Add card</string>
    <string name="card_number_label" translatable="false">4111111111111111</string>
    <string name="card_name" translatable="false">Card name</string>
    <string name="year" translatable="false">2015</string>
    <string name="month" translatable="false">12</string>
    <string name="cvv" translatable="false">123</string>
    <string name="add_card_btn" translatable="false">ADD CARD</string>
    <string name="month_label" translatable="false">Month</string>
    <string name="card_number_label_" translatable="false">Number</string>
    <string name="year_label" translatable="false">Year</string>
    <string name="cvv_label" translatable="false">CVV</string>
    <string name="number_not_valid" translatable="false">Your card number is not valid</string>
    <string name="card_not_valid" translatable="false">Not valid card</string>
    <string name="no_rides" translatable="false">You don\'t have any ride</string>
    <string name="no_requests" translatable="false">You don\'t have any request</string>
    <string name="date" translatable="false">Date</string>
    <string name="no_bills" translatable="false">You don\'t have any bill</string>
    <string name="date_label" translatable="false">2018/12/15  12:35</string>
    <string name="random" translatable="false">Here is a random text, it was just generated for testing purposes. It must not be use in production, so be careful.</string>
    <string name="no_messages" translatable="false">You don\'t have any message</string>
    <string name="email_label" translatable="false">mateo21@gmail.com</string>
    <string name="phone_label" translatable="false">+330766811008</string>
    <string name="share" translatable="false">Share</string>
    <string name="send_to" translatable="false">Share with</string>
    <string name="carla_client" translatable="false">CLIENT</string>
    <string name="version" translatable="false">Version 1.0</string>
    <string name="time_is_late" translatable="false">It two last, try again in the morning</string>

</resources>
