<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_rides"
            android:icon="@drawable/ic_rides"
            android:title="@string/rides" />
        <!--<item-->
            <!--android:id="@+id/nav_requests"-->
            <!--android:icon="@drawable/ic_requests"-->
            <!--android:title="@string/requests" />-->
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_bills"
            android:title="@string/bills" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/messages"
            app:actionLayout="@layout/menu_count" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>