<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".fragments.SignUpCodeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/enter_the_code_you_just_received"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_edittext">

        <EditText
            android:id="@+id/edtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext_no_border"
            android:textSize="15sp"
            android:inputType="number"
            android:hint="@string/code" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/background_button_primary_rounded"
        android:layout_marginTop="32dp"
        android:text="@string/next" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/you_did_not_received_the_code"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/background_button_secondary_rounded"
        android:layout_marginTop="16dp"
        android:text="@string/send" />

</LinearLayout>