<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddCodeActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/code" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAddCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/background_button_secondary_rounded"
            android:layout_marginTop="32dp"
            android:text="@string/add_code" />

        <Button
            android:id="@+id/btnSendRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/background_button_primary_rounded"
            android:layout_marginTop="32dp"
            android:text="@string/send_request" />

    </LinearLayout>

</LinearLayout>