<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.PaymentFragment"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/rllCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_card" />

            <TextView
                android:id="@+id/txtCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="xxxx xxxx xxxx"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_delete" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card_label"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_edittext">

        <EditText
            android:id="@+id/edtCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext_no_border"
            android:textSize="15sp"
            android:inputType="number"
            android:hint="@string/card_number_label_" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="4"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtCardYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/year_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="3"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtCardMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/month_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtCardCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/cvv_label" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/background_button_primary_rounded"
        android:layout_marginTop="32dp"
        android:text="@string/add_card_btn" />

</LinearLayout>