<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpInformationsFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="260dp">

            <com.projects.zonetwyn.carla.components.CircularImageView
                android:id="@+id/imgPicture"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_person"
                app:civ_border="true"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btnPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_camera"
                    app:backgroundTint="@color/colorSecondary"
                    app:fabSize="normal"
                    app:elevation="2dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btnGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_gallery"
                    android:visibility="gone"
                    app:backgroundTint="@color/colorSecondaryDark"
                    app:fabSize="normal"
                    app:elevation="2dp" />

            </LinearLayout>

        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="textPersonName"
                android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtSurnameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="textPersonName"
                android:hint="@string/surname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/chbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/i_have_read_and_accept_the" />

            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="15sp"
                android:text="@string/terms_of_use" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/background_button_primary_rounded"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/sign_up" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>